<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- person information-->
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="hometown">家乡</string>
    <string name="comdata_complete">完成</string>
    <string-array name="choose_sexs">
        <item>男</item>
        <item>女</item>
    </string-array>

    <!-- about-->
    <string name="yami_version">呀米 v1.0.0</string>
    <string name="newUser">新手教程</string>
    <string name="feedback">反馈</string>
    <string name="share">分享给朋友</string>
    <string name="ranking">评分</string>
    <string name="description">呀米是一款专注于食堂饭菜推荐的软件</string>
    <string name="terms_of_use">《使用条款》</string>

    <!-- detail-->
    <string name="material">原料：</string>
    <string name="clock">供应时间：</string>
    <string name="place">供应地点：</string>
    <string name="taste">口味：</string>
    <string name="dish_desciption">描述：</string>
    <string name="dish_share">分享</string>

    <!-- all-->
    <!--饭堂-->
    <string name="allcatin">全部饭堂</string>
    <string name="catin_1st">一饭</string>
    <string name="catin_2nd">二饭</string>

    <!--菜式-->
    <string name="alldish">所有菜式</string>
    <string name="dish_dessert">甜点</string>
    <string name="dish_cake">糕点</string>
    <string name="dish_soup">汤</string>
    <string name="dish_set">套餐</string>
    <string name="dish_normal">普通菜式</string>

    <!--口味-->
    <string name="alltaste">所有口味</string>
    <string name="taste_sweet">甜</string>
    <string name="taste_peppery">辣</string>
    <string name="taste_sour">酸</string>
    <string name="taste_salty">咸</string>

    <!--价格-->
    <string name="allprice">所有价格</string>
    <string name="price_0to3">0～3元</string>
    <string name="price_3to5">3～5元</string>
    <string name="price_5to10">5～10元</string>
    <string name="price_above10">10元以上</string>
</resources>
