<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/clr_whitedown">
    <!-- 选择菜式，使用单选钮组件-->
    <com.example.y430.apptest40.RadioGroup
        android:id="@+id/select_dish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- 使用线性布局存放单选钮-->
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <!--所有菜式，单选钮-->
            <RadioButton
                android:id="@+id/item_alldish"
                android:text="@string/alldish"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>
            <!-- 甜点，单选钮-->
            <RadioButton
                android:id="@+id/item_dessert"
                android:text="@string/dish_dessert"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>

            <!-- 糕点，单选钮-->
            <RadioButton
                android:id="@+id/item_cake"
                android:text="@string/dish_cake"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>

            <!-- 汤，单选钮-->
            <RadioButton
                android:id="@+id/item_soup"
                android:text="@string/dish_soup"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>

            <!-- 套餐，单选钮-->
            <RadioButton
                android:id="@+id/item_set"
                android:text="@string/dish_set"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>
        </com.zhy.android.percent.support.PercentLinearLayout>
        <!-- 同上-->
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <!-- 普通菜式，单选钮-->
            <RadioButton
                android:id="@+id/item_normal"
                android:text="@string/dish_normal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"
                android:checked="false" />
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.example.y430.apptest40.RadioGroup>
</LinearLayout>
