<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/clr_whitedown">
    <!-- 选择口味，使用单选钮组件-->
    <com.example.y430.apptest40.RadioGroup
        android:id="@+id/select_taste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- 使用线性布局存放单选钮-->
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <!-- 所有口味，单选钮-->
            <RadioButton
                android:id="@+id/item_alltaste"
                android:text="@string/alltaste"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_widthPercent="21%"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>

            <!-- 甜，单选钮-->
            <RadioButton
                android:id="@+id/item_sweet"
                android:text="@string/taste_sweet"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_widthPercent="10%"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>

            <!-- 辣，单选钮-->
            <RadioButton
                android:id="@+id/item_peppery"
                android:text="@string/taste_peppery"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_widthPercent="10%"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>

            <!-- 酸，单选钮-->
            <RadioButton
                android:id="@+id/item_sour"
                android:text="@string/taste_sour"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_widthPercent="10%"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>

            <!-- 咸，单选钮-->
            <RadioButton
                android:id="@+id/item_salty"
                android:text="@string/taste_salty"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/AllMenuButton"
                app:layout_widthPercent="10%"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="4%"/>
        </com.zhy.android.percent.support.PercentLinearLayout>
        <!-- 同上-->
    </com.example.y430.apptest40.RadioGroup>
</LinearLayout>
